--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Hazem Mesilhy
-#logo: /assets/img/headshot_circle.png
+logo: /assets/Subject.png
 #description: text below image
 show_downloads: flase
 theme: jekyll-theme-minimal
