--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Hazem Mesilhy
 logo: /assets/Subject.png
-description: [PDF version](./assets/HazemMesilhy_Sept.2023.pdf)
+#description: [PDF version](./assets/HazemMesilhy_Sept.2023.pdf)
 #show_downloads: flase
 theme: jekyll-theme-minimal
