--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Hazem Mesilhy
 logo: /assets/Subject.png
 #description: [PDF version](./assets/HazemMesilhy_Sept.2023.pdf)
 #show_downloads: flase
-theme: jekyll-theme-minimal
+#theme: jekyll-theme-minimal
