--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ logo: /assets/Subject.png
 #description: [PDF version](./assets/HazemMesilhy_Sept.2023.pdf)
 #show_downloads: flase
 #theme: jekyll-theme-minimal
+remote_theme: pages-themes/minimal@v0.2.0
