--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Hazem Mesilhy
 logo: ./assets/Subject.png
-#description: [PDF version](./assets/HazemMesilhy_Sept.2023.pdf)
+description: Email: Hazem.Safwat.Mesilhy@fau.de
 #show_downloads: flase
 #theme: jekyll-theme-minimal
 remote_theme: pages-themes/hacker@v0.2.0
