--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Hazem Mesilhy
-#logo: ./assets/Subject.png
+logo: ./assets/Subject.png
 #description: Email: Hazem.Safwat.Mesilhy@fau.de
 #show_downloads: flase
 theme: jekyll-theme-minimal
