--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ title: Hazem Mesilhy
 logo: ./assets/Subject.png
 #description: Email: Hazem.Safwat.Mesilhy@fau.de
 #show_downloads: flase
-theme: jekyll-theme-minima
-#remote_theme: pages-themes/hacker@v0.2.0
+#theme: jekyll-theme-minima
+remote_theme: pages-themes/tactile@v0.2.0
