--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ logo: ./assets/Subject.png
 #description: Email: Hazem.Safwat.Mesilhy@fau.de
 #show_downloads: flase
 #theme: jekyll-theme-minima
-remote_theme: pages-themes/minima@v0.2.0
+remote_theme: pages-themes/merlot@v0.2.0
